# CosplayCore

./: AGENTS.md
app/: pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/example/cosplay_core_app/: MainActivity.kt
app/lib/: bluetooth_state.dart  device_view.dart  main.dart
firmware/: .clang-format  Cargo.toml  sdkconfig  sdkconfig.old
firmware/main/: CMakeLists.txt  main.c
firmware/main/bluetooth/: bluetooth.c  bluetooth.h  bt_audio.c  bt_audio.h  bt_core.c  bt_core.h  bt_pairing.c  bt_pairing.h  bt_spp.c  bt_spp.h  messages.c  messages.h
firmware/main/codec/: filters.c  filters.h  i2s.c  i2s.h  settings.c  settings.h  spi.c  spi.h
firmware/src/: codec.rs  main.rs
firmware/src/codec/: mod.rs
firmware/src/codec/spi/: consts.rs  mod.rs
hardware/main_board/: main_board.kicad_pcb
